parte 4/test3/Parser.output
Terminals unused in grammar

   _ERROR_


Grammatica

    0 $accept: S $end

    1 S: ListCS _SYMB_0 DivIS

    2 DivIS: ListCS _SYMB_6 Import
    3      | ListCS _SYMB_8 SectionP

    4 Import: ListCS _SYMB_1 ListCS NameFile ListCS _SYMB_2 ListCS _SYMB_6 ListCS _SYMB_1 S

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields

    6 SectionF: ListCS _SYMB_0 ListCS _SYMB_8 SectionP
    7         | ListCS FEOF

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT

    9 FieldT: ListCS _SYMB_0 ListCS _SYMB_5 Fields
   10       | ListCS _SYMB_2 ListCS _SYMB_8 ListCS _SYMB_1 SectionF

   11 CS: _SYMB_12

   12 ListCS: %empty
   13       | ListCS CS

   14 Value: _STRING_
   15      | _INTEGER_
   16      | _DOUBLE_
   17      | TBool
   18      | _SYMB_10
   19      | _SYMB_11

   20 TBool: _SYMB_9
   21      | _SYMB_4

   22 NameFile: _SYMB_13 S

   23 NameField: _IDENT_

   24 NameSection: _IDENT_


Simboli terminali e regole in cui appaiono

$end (0) 0
error (256)
_ERROR_ (258)
_SYMB_0 (259) 1 5 6 9
_SYMB_1 (260) 4 5 8 10
_SYMB_2 (261) 4 8 10
_SYMB_3 (262) 5 8
_SYMB_4 (263) 21
_SYMB_5 (264) 5 8 9
_SYMB_6 (265) 2 4
_SYMB_7 (266) 5 8
_SYMB_8 (267) 3 6 10
_SYMB_9 (268) 20
_SYMB_10 (269) 18
_SYMB_11 (270) 19
_SYMB_12 (271) 11
_SYMB_13 (272) 22
_STRING_ (273) 14
_INTEGER_ (274) 15
_DOUBLE_ (275) 16
_IDENT_ (276) 23 24
FEOF (277) 7


Simboli nonterminali e regole in cui appaiono

$accept (23)
    nel primo membro: 0
S (24)
    nel primo membro: 1, nel secondo membro: 0 4 22
DivIS (25)
    nel primo membro: 2 3, nel secondo membro: 1
Import (26)
    nel primo membro: 4, nel secondo membro: 2
SectionP (27)
    nel primo membro: 5, nel secondo membro: 3 6
SectionF (28)
    nel primo membro: 6 7, nel secondo membro: 10
Fields (29)
    nel primo membro: 8, nel secondo membro: 5 9
FieldT (30)
    nel primo membro: 9 10, nel secondo membro: 8
CS (31)
    nel primo membro: 11, nel secondo membro: 13
ListCS (32)
    nel primo membro: 12 13, nel secondo membro: 1 2 3 4 5 6 7 8 9
    10 13
Value (33)
    nel primo membro: 14 15 16 17 18 19, nel secondo membro: 8
TBool (34)
    nel primo membro: 20 21, nel secondo membro: 17
NameFile (35)
    nel primo membro: 22, nel secondo membro: 4
NameField (36)
    nel primo membro: 23, nel secondo membro: 8
NameSection (37)
    nel primo membro: 24, nel secondo membro: 5


Stato 0

    0 $accept: . S $end

    $default  riduzione con la regola 12 (ListCS)

    S       prosecuzione allo stato 1
    ListCS  prosecuzione allo stato 2


Stato 1

    0 $accept: S . $end

    $end  shift e prosecuzione allo stato 3


Stato 2

    1 S: ListCS . _SYMB_0 DivIS
   13 ListCS: ListCS . CS

    _SYMB_0   shift e prosecuzione allo stato 4
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 3

    0 $accept: S $end .

    $default  accetta


Stato 4

    1 S: ListCS _SYMB_0 . DivIS

    $default  riduzione con la regola 12 (ListCS)

    DivIS   prosecuzione allo stato 7
    ListCS  prosecuzione allo stato 8


Stato 5

   11 CS: _SYMB_12 .

    $default  riduzione con la regola 11 (CS)


Stato 6

   13 ListCS: ListCS CS .

    $default  riduzione con la regola 13 (ListCS)


Stato 7

    1 S: ListCS _SYMB_0 DivIS .

    $default  riduzione con la regola 1 (S)


Stato 8

    2 DivIS: ListCS . _SYMB_6 Import
    3      | ListCS . _SYMB_8 SectionP
   13 ListCS: ListCS . CS

    _SYMB_6   shift e prosecuzione allo stato 9
    _SYMB_8   shift e prosecuzione allo stato 10
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 9

    2 DivIS: ListCS _SYMB_6 . Import

    $default  riduzione con la regola 12 (ListCS)

    Import  prosecuzione allo stato 11
    ListCS  prosecuzione allo stato 12


Stato 10

    3 DivIS: ListCS _SYMB_8 . SectionP

    $default  riduzione con la regola 12 (ListCS)

    SectionP  prosecuzione allo stato 13
    ListCS    prosecuzione allo stato 14


Stato 11

    2 DivIS: ListCS _SYMB_6 Import .

    $default  riduzione con la regola 2 (DivIS)


Stato 12

    4 Import: ListCS . _SYMB_1 ListCS NameFile ListCS _SYMB_2 ListCS _SYMB_6 ListCS _SYMB_1 S
   13 ListCS: ListCS . CS

    _SYMB_1   shift e prosecuzione allo stato 15
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 13

    3 DivIS: ListCS _SYMB_8 SectionP .

    $default  riduzione con la regola 3 (DivIS)


Stato 14

    5 SectionP: ListCS . _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields
   13 ListCS: ListCS . CS

    _SYMB_7   shift e prosecuzione allo stato 16
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 15

    4 Import: ListCS _SYMB_1 . ListCS NameFile ListCS _SYMB_2 ListCS _SYMB_6 ListCS _SYMB_1 S

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 17


Stato 16

    5 SectionP: ListCS _SYMB_7 . ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 18


Stato 17

    4 Import: ListCS _SYMB_1 ListCS . NameFile ListCS _SYMB_2 ListCS _SYMB_6 ListCS _SYMB_1 S
   13 ListCS: ListCS . CS

    _SYMB_12  shift e prosecuzione allo stato 5
    _SYMB_13  shift e prosecuzione allo stato 19

    CS        prosecuzione allo stato 6
    NameFile  prosecuzione allo stato 20


Stato 18

    5 SectionP: ListCS _SYMB_7 ListCS . _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields
   13 ListCS: ListCS . CS

    _SYMB_3   shift e prosecuzione allo stato 21
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 19

   22 NameFile: _SYMB_13 . S

    $default  riduzione con la regola 12 (ListCS)

    S       prosecuzione allo stato 22
    ListCS  prosecuzione allo stato 2


Stato 20

    4 Import: ListCS _SYMB_1 ListCS NameFile . ListCS _SYMB_2 ListCS _SYMB_6 ListCS _SYMB_1 S

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 23


Stato 21

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 . ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 24


Stato 22

   22 NameFile: _SYMB_13 S .

    $default  riduzione con la regola 22 (NameFile)


Stato 23

    4 Import: ListCS _SYMB_1 ListCS NameFile ListCS . _SYMB_2 ListCS _SYMB_6 ListCS _SYMB_1 S
   13 ListCS: ListCS . CS

    _SYMB_2   shift e prosecuzione allo stato 25
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 24

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS . NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields
   13 ListCS: ListCS . CS

    _SYMB_12  shift e prosecuzione allo stato 5
    _IDENT_   shift e prosecuzione allo stato 26

    CS           prosecuzione allo stato 6
    NameSection  prosecuzione allo stato 27


Stato 25

    4 Import: ListCS _SYMB_1 ListCS NameFile ListCS _SYMB_2 . ListCS _SYMB_6 ListCS _SYMB_1 S

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 28


Stato 26

   24 NameSection: _IDENT_ .

    $default  riduzione con la regola 24 (NameSection)


Stato 27

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection . ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 29


Stato 28

    4 Import: ListCS _SYMB_1 ListCS NameFile ListCS _SYMB_2 ListCS . _SYMB_6 ListCS _SYMB_1 S
   13 ListCS: ListCS . CS

    _SYMB_6   shift e prosecuzione allo stato 30
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 29

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS . _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields
   13 ListCS: ListCS . CS

    _SYMB_1   shift e prosecuzione allo stato 31
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 30

    4 Import: ListCS _SYMB_1 ListCS NameFile ListCS _SYMB_2 ListCS _SYMB_6 . ListCS _SYMB_1 S

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 32


Stato 31

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 . ListCS _SYMB_0 ListCS _SYMB_5 Fields

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 33


Stato 32

    4 Import: ListCS _SYMB_1 ListCS NameFile ListCS _SYMB_2 ListCS _SYMB_6 ListCS . _SYMB_1 S
   13 ListCS: ListCS . CS

    _SYMB_1   shift e prosecuzione allo stato 34
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 33

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS . _SYMB_0 ListCS _SYMB_5 Fields
   13 ListCS: ListCS . CS

    _SYMB_0   shift e prosecuzione allo stato 35
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 34

    4 Import: ListCS _SYMB_1 ListCS NameFile ListCS _SYMB_2 ListCS _SYMB_6 ListCS _SYMB_1 . S

    $default  riduzione con la regola 12 (ListCS)

    S       prosecuzione allo stato 36
    ListCS  prosecuzione allo stato 2


Stato 35

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 . ListCS _SYMB_5 Fields

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 37


Stato 36

    4 Import: ListCS _SYMB_1 ListCS NameFile ListCS _SYMB_2 ListCS _SYMB_6 ListCS _SYMB_1 S .

    $default  riduzione con la regola 4 (Import)


Stato 37

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS . _SYMB_5 Fields
   13 ListCS: ListCS . CS

    _SYMB_5   shift e prosecuzione allo stato 38
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 38

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 . Fields

    $default  riduzione con la regola 12 (ListCS)

    Fields  prosecuzione allo stato 39
    ListCS  prosecuzione allo stato 40


Stato 39

    5 SectionP: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameSection ListCS _SYMB_1 ListCS _SYMB_0 ListCS _SYMB_5 Fields .

    $default  riduzione con la regola 5 (SectionP)


Stato 40

    8 Fields: ListCS . _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT
   13 ListCS: ListCS . CS

    _SYMB_7   shift e prosecuzione allo stato 41
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 41

    8 Fields: ListCS _SYMB_7 . ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 42


Stato 42

    8 Fields: ListCS _SYMB_7 ListCS . _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT
   13 ListCS: ListCS . CS

    _SYMB_3   shift e prosecuzione allo stato 43
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 43

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 . ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 44


Stato 44

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS . NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT
   13 ListCS: ListCS . CS

    _SYMB_12  shift e prosecuzione allo stato 5
    _IDENT_   shift e prosecuzione allo stato 45

    CS         prosecuzione allo stato 6
    NameField  prosecuzione allo stato 46


Stato 45

   23 NameField: _IDENT_ .

    $default  riduzione con la regola 23 (NameField)


Stato 46

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField . ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 47


Stato 47

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS . _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT
   13 ListCS: ListCS . CS

    _SYMB_1   shift e prosecuzione allo stato 48
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 48

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 . ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 49


Stato 49

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS . Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT
   13 ListCS: ListCS . CS

    _SYMB_4    shift e prosecuzione allo stato 50
    _SYMB_9    shift e prosecuzione allo stato 51
    _SYMB_10   shift e prosecuzione allo stato 52
    _SYMB_11   shift e prosecuzione allo stato 53
    _SYMB_12   shift e prosecuzione allo stato 5
    _STRING_   shift e prosecuzione allo stato 54
    _INTEGER_  shift e prosecuzione allo stato 55
    _DOUBLE_   shift e prosecuzione allo stato 56

    CS     prosecuzione allo stato 6
    Value  prosecuzione allo stato 57
    TBool  prosecuzione allo stato 58


Stato 50

   21 TBool: _SYMB_4 .

    $default  riduzione con la regola 21 (TBool)


Stato 51

   20 TBool: _SYMB_9 .

    $default  riduzione con la regola 20 (TBool)


Stato 52

   18 Value: _SYMB_10 .

    $default  riduzione con la regola 18 (Value)


Stato 53

   19 Value: _SYMB_11 .

    $default  riduzione con la regola 19 (Value)


Stato 54

   14 Value: _STRING_ .

    $default  riduzione con la regola 14 (Value)


Stato 55

   15 Value: _INTEGER_ .

    $default  riduzione con la regola 15 (Value)


Stato 56

   16 Value: _DOUBLE_ .

    $default  riduzione con la regola 16 (Value)


Stato 57

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value . ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 59


Stato 58

   17 Value: TBool .

    $default  riduzione con la regola 17 (Value)


Stato 59

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS . _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT
   13 ListCS: ListCS . CS

    _SYMB_2   shift e prosecuzione allo stato 60
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 60

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 . ListCS _SYMB_5 ListCS _SYMB_1 FieldT

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 61


Stato 61

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS . _SYMB_5 ListCS _SYMB_1 FieldT
   13 ListCS: ListCS . CS

    _SYMB_5   shift e prosecuzione allo stato 62
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 62

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 . ListCS _SYMB_1 FieldT

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 63


Stato 63

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS . _SYMB_1 FieldT
   13 ListCS: ListCS . CS

    _SYMB_1   shift e prosecuzione allo stato 64
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 64

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 . FieldT

    $default  riduzione con la regola 12 (ListCS)

    FieldT  prosecuzione allo stato 65
    ListCS  prosecuzione allo stato 66


Stato 65

    8 Fields: ListCS _SYMB_7 ListCS _SYMB_3 ListCS NameField ListCS _SYMB_1 ListCS Value ListCS _SYMB_2 ListCS _SYMB_5 ListCS _SYMB_1 FieldT .

    $default  riduzione con la regola 8 (Fields)


Stato 66

    9 FieldT: ListCS . _SYMB_0 ListCS _SYMB_5 Fields
   10       | ListCS . _SYMB_2 ListCS _SYMB_8 ListCS _SYMB_1 SectionF
   13 ListCS: ListCS . CS

    _SYMB_0   shift e prosecuzione allo stato 67
    _SYMB_2   shift e prosecuzione allo stato 68
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 67

    9 FieldT: ListCS _SYMB_0 . ListCS _SYMB_5 Fields

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 69


Stato 68

   10 FieldT: ListCS _SYMB_2 . ListCS _SYMB_8 ListCS _SYMB_1 SectionF

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 70


Stato 69

    9 FieldT: ListCS _SYMB_0 ListCS . _SYMB_5 Fields
   13 ListCS: ListCS . CS

    _SYMB_5   shift e prosecuzione allo stato 71
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 70

   10 FieldT: ListCS _SYMB_2 ListCS . _SYMB_8 ListCS _SYMB_1 SectionF
   13 ListCS: ListCS . CS

    _SYMB_8   shift e prosecuzione allo stato 72
    _SYMB_12  shift e prosecuzione allo stato 5

    CS  prosecuzione allo stato 6


Stato 71

    9 FieldT: ListCS _SYMB_0 ListCS _SYMB_5 . Fields

    $default  riduzione con la regola 12 (ListCS)

    Fields  prosecuzione allo stato 73
    ListCS  prosecuzione allo stato 40


Stato 72

   10 FieldT: ListCS _SYMB_2 ListCS _SYMB_8 . ListCS _SYMB_1 SectionF

    $default  riduzione con la regola 12 (ListCS)

    ListCS  prosecuzione allo stato 74


Stato 73

    9 FieldT: ListCS _SYMB_0 ListCS _SYMB_5 Fields .
